#menu alignment fixes on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -1035,7 +1035,7 @@ p {
     height: 30px;
     cursor: pointer;
     float: right;
-    margin: 1rem 0 0 0;
+    margin: 1.5rem 0 0 0;
   }
   nav .grid-4-6 #menu .bar {
     height: 5px;
