--- a/src/scss/_media-queries.scss
+++ b/src/scss/_media-queries.scss
@@ -29,7 +29,7 @@
                 height: 30px;
                 cursor: pointer;
                 float: right;
-                margin: 1rem 0 0 0;
+                margin: 1.5rem 0 0 0;
 
                 .bar {
                     height: 5px;
